# cpp-shm-exercise

./: CMakeLists.txt  README.md
example/: data_creator_writer_shm.cpp  data_reader_writer_shm.cpp  message_queue_reader.cpp  message_queue_writer.cpp  shared_data.h  single_process_shm.cpp
